--- a/examples/index.css
+++ b/examples/index.css
@@ -1,7 +1,12 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+}
+
+.app-main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 400px;
 }
