--- a/examples/index.css
+++ b/examples/index.css
@@ -1,12 +1,28 @@
+@import "~element-ui/lib/theme-chalk/index.css";
+
 html, body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
 }
-
+body{
+  background-color: whitesmoke;
+}
 .app-main {
   display: flex;
   align-items: center;
   justify-content: center;
   max-height: 400px;
+}
+
+.el-header {
+  padding: 0;
+}
+
+.el-footer {
+  padding: 0;
+}
+
+.el-aside{
+  overflow: hidden;
 }
